<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="20dp"
    android:layout_marginRight="20dp"
    android:layout_marginLeft="20dp"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/busca_tv_porcpf"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <EditText
            android:id="@+id/busca_et_cpf"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:hint="@string/busca_et_hint_cpf"/>
        <Button
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/busca_btn_buscar"
            style="?android:attr/buttonBarButtonStyle"
            android:onClick="buscar"/>

    </LinearLayout>

        <ListView
            android:id="@+id/busca_list"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"/>

</LinearLayout>
